2009-10-15  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#137452 - Remove nice task launcher animation
	
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-page.h
	* src/launcher/hd-launcher-grid.c
	* src/launcher/hd-launcher-grid.h: Move transition_depth from function
	  call into the grid's private data. Also load the 'sequenced' flag,
	  and disable the nice sequencing of the task launcher animation if it
	  is not set.
	* data/transitions.ini: Set sequenced to 0 for the two launcher 
	  transitions, and speed them up to the same amount as everything else.

2009-10-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#140246 - Input method support to desktop

	* tests/test-applet.c: Updated to have a GtkEntry that can be used for
	Home applet focus testing.
	* src/home/hd-home.c (hd_home_desktop_do_motion): Unfocus any applet
	if we start panning.
	(hd_home_desktop_do_press): Don't send the press event to applet that
	will be transferred the input focus.
	(do_applet_release): Focus the applet if it does not have focus and
	wants it, otherwise just send the release event.
	(hd_home_client_owns_or_child_xwindow): New function to check if a
	client owns a certain X window or has that as its child.

2009-10-15  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Allow keypresses to CallUI and Contacts only in HDRM_STATE_HOME.
	For: NB#141019

	* src/home/hd-home.c:
	* src/home/hd-render-manager.h:

2009-10-15  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Small tweak for last fix. Make sure
	  the status area can't be clicked if a dialog is up and it is blurred
	  (in portrait mode).

2009-10-15  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-home-applet.c (hd_home_applet_init): If an applet does not
	have the applet id, use "hd-applet-no-id" as fallback. Avoids a crash.

2009-10-14  Jan Arne Petersen  <jpetersen@openismus.com>
