@@ -161,3 +161,9 @@ duration_out = 250
 # a minimum of 10s.
 load_average_factor = 7.5
 
+# Edit mode configuration
+[edit_mode]
+snap_grid_size = 4
+# Set to 0 if snap to grid should be only happen when widget is released
+snap_to_grid_while_move = 1
+
